funkcionalnosti kalkulatora su uspesno implementirane

--- a/kalkulator.html
+++ b/kalkulator.html
@@ -28,5 +28,6 @@
             <button class="operacijabutton">+</button>
         </div>
     </div>
+    <script src="js/kalkulator.js"></script>
 </body>
 </html>
