implementacija konvertora temperature

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: rgb(143, 239, 193); display: flex; flex-direction: column; gap: 20px; margin:  0 auto; align-items: center;">
     <h1>JS aplikacije</h1>
+    <a style="display: block; text-decoration: none; color: black;" href="kviz.html">Kviz</a> 
+    <a style="display: block; text-decoration: none;  color: black;" href="kalkulator.html">Kalkulator</a> 
+    <a style="display: block; text-decoration: none;  color: black;" href="todo.html">Kanban to do lista</a> 
+    <a style="display: block; text-decoration: none;  color: black;" href="konverzijaTemperature.html">Konverzija temperature</a>
 </body>
 </html>
