vremenska prognoza api

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <a style="display: block; text-decoration: none;  color: black;" href="kalkulator.html">Kalkulator</a> 
     <a style="display: block; text-decoration: none;  color: black;" href="todo.html">Kanban to do lista</a> 
     <a style="display: block; text-decoration: none;  color: black;" href="konverzijaTemperature.html">Konverzija temperature</a>
+    <a style="display: block; text-decoration: none;  color: black;" href="vremenskaPrognoza.html">Vremenska prognoza</a>
 </body>
 </html>
