--- a/index.html
+++ b/index.html
@@ -4,13 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            background: linear-gradient(135deg, #74ebd5, #acb6e5);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .container {
+            text-align: center;
+        }
+        h1 {
+            margin-bottom: 30px;
+            color: #333;
+        }
+        .app-card {
+            background: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+            width: 200px;
+            text-decoration: none;
+            color: #333;
+            transition: transform 0.3s;
+            margin-bottom: 10px;
+        }
+        .app-card:hover {
+            transform: scale(1.05);
+        }
+    </style>
 </head>
 <body style="background-color: rgb(143, 239, 193); display: flex; flex-direction: column; gap: 20px; margin:  0 auto; align-items: center;">
-    <h1>JS aplikacije</h1>
-    <a style="display: block; text-decoration: none; color: black;" href="kviz.html">Kviz</a> 
-    <a style="display: block; text-decoration: none;  color: black;" href="kalkulator.html">Kalkulator</a> 
-    <a style="display: block; text-decoration: none;  color: black;" href="todo.html">Kanban to do lista</a> 
-    <a style="display: block; text-decoration: none;  color: black;" href="konverzijaTemperature.html">Konverzija temperature</a>
-    <a style="display: block; text-decoration: none;  color: black;" href="vremenskaPrognoza.html">Vremenska prognoza</a>
+    <div class="container">
+        <h1>JS aplikacije</h1>
+        <a class="app-card" style="display: block; text-decoration: none; color: black;" href="kviz.html">Kviz</a> 
+        <a class="app-card" style="display: block; text-decoration: none;  color: black;" href="kalkulator.html">Kalkulator</a> 
+        <a class="app-card" style="display: block; text-decoration: none;  color: black;" href="todo.html">Kanban to do lista</a> 
+        <a class="app-card" style="display: block; text-decoration: none;  color: black;" href="konverzijaTemperature.html">Konverzija temperature</a>
+        <a class="app-card" style="display: block; text-decoration: none;  color: black;" href="vremenskaPrognoza.html">Vremenska prognoza</a>
+    </div>
+    
 </body>
 </html>
