--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <a class="app-card" style="display: block; text-decoration: none; color: black;" href="kviz.html">Kviz</a> 
         <a class="app-card" style="display: block; text-decoration: none;  color: black;" href="kalkulator.html">Kalkulator</a> 
         <a class="app-card" style="display: block; text-decoration: none;  color: black;" href="todo.html">Kanban to do lista</a> 
+        <a class="app-card" style="display: block; text-decoration: none;  color: black;" href="obicnatodolista.html">Obična to do lista</a> 
         <a class="app-card" style="display: block; text-decoration: none;  color: black;" href="konverzijaTemperature.html">Konverzija temperature</a>
         <a class="app-card" style="display: block; text-decoration: none;  color: black;" href="vremenskaPrognoza.html">Vremenska prognoza</a>
     </div>
