kurs finder aplikacija

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <a class="app-card" style="display: block; text-decoration: none;  color: black;" href="obicnatodolista.html">Obična to do lista</a> 
         <a class="app-card" style="display: block; text-decoration: none;  color: black;" href="konverzijaTemperature.html">Konverzija temperature</a>
         <a class="app-card" style="display: block; text-decoration: none;  color: black;" href="vremenskaPrognoza.html">Vremenska prognoza</a>
+        <a class="app-card" style="display: block; text-decoration: none;  color: black;" href="couseFinder.html">Kurs finder</a>
     </div>
     
 </body>
